# otrbot

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: IMPROVEMENT_PLAN.md  _process_chains.py  select.sql
otrbot-portable/: install.cmd  run.cmd
src/: .env  .env.example  main.py
src/otrbot/: __init__.py  config.py  constants.py  otr_logging.py  runner.py
src/otrbot/models/: __init__.py  address.py  amount.py  deadline.py  denomination.py  master.py  search_table.py  stack.py
src/otrbot/services/: __init__.py  contract_service.py  decision_service.py  login_service.py  pandas_service.py  submission_service.py  support_list_service.py  webdriver_service.py
tests/: __init__.py  test_decision_service.py  test_support_list_service.py
